fix in spacing

--- a/Kamen/kamenstyle.css
+++ b/Kamen/kamenstyle.css
@@ -387,7 +387,7 @@ footer {
   justify-content: space-between;
   align-items: flex-start;
   text-align: left;
-  margin: -100rem auto 2rem auto;
+  margin: -85rem auto 2rem auto;
   background-color: rgba(255, 255, 255, 0.7);
   border-radius: 1rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
